boot/tests/errors/vis_private/vis_private.c
#error vis_private:6:18 Expected to have field: 'privateFun'.
#error vis_private:6:3 Undefined variable vis_private_sub

